# fastapimsal

./: .gitignore  .pre-commit-config.yaml  .safety-policy.yml  README.md  SECURITY.md  mypy.ini  pyproject.toml
.github/workflows/: lint.yaml  test.yaml
fastapimsal/: auth_routes.py  config.py
tests/: test_frontend_auth.py
