[project]
name = "fastapimsal"
version = "0.10.0"
description = "Library to authenticate users using MSAL"
authors = [
  {"name" = "Oscar Giles", "email"=" ogiles@turing.ac.uk"},
]
dynamic = [ "dependencies" ]
requires-python = ">=3.10"
dependencies = [
    "anyio>=4.9.0,<5.0.0",
    "async-lru>=1.0.3,<2.0.0",
    "fastapi>=0.115.14,<0.116.0",
    "httpx>=0.23.3,<0.24.0",
    "itsdangerous>=1.1.0,<2.0.0",
    "msal>=1.32.3,<2.0.0",
    "pydantic>=2.9.2,<3.0.0",
    "pydantic-settings>=2.10.1,<3.0.0",
    "python-jose>=3.5.0,<4.0.0",
]


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^5"
httpie-jwt-auth = "^0.4.0"
httpie = "^3.2.4"
isort = "^5.8.0"
mypy = "^1.1.1"
pre-commit = "^4.2.0"
pytest = "^7.2"
pylint = "^2.7.2"
safety = "^3.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
